<resources>
    <string name="app_name" translatable="false">CookBook</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="nav_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="nav_drawer_close" translatable="false">Close Navigation Drawer</string>


    <string name="cook" translatable="false"><b>Cook Book</b></string>

    <string name="welcome"><b>Welcome</b></string>
    <string name="start">Let\'s get started</string>
    <string name="email">Enter Email*</string>
    <string name="password">Enter password*</string>
    <string name="forgotpassword"><u>Forgot password?</u></string>
    <string name="signin"><b>Sign in</b></string>
    <string name="signup">New here? <u><b>Sign up</b></u> instead</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="or">OR</string>
    <string name="login">Do you have an account? <u><b>Log in</b></u></string>


    <!-- Discover fragment-->
    <string name="search">Search Recipe</string>


    <!-- My recipe fragment-->
    <string name="UserName">User Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="enter_name">Enter Name*</string>
    <string name="enter_email">Enter Email*</string>
    <string name="enter_password">Enter Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="please_enter_your_registered_email_id_below">Please enter your registered email id below.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="submit">Submit</string>
    <string name="save">Save Changes</string>
    <string name="emailProfile">Email :</string>
    <string name="nameProfile">Name :</string>
    <string name="recipe_name">Recipe Name :</string>
    <string name="country">Country :</string>
    <string name="recipe_type">Recipe Type :</string>
    <string name="chef_name">Chef Name :</string>
    <string name="ingredients">Ingredients :</string>
    <string name="direction">Directions :</string>
    <string name="duration">Duration :</string>
    <string name="step_1">Step - 1</string>
    <string name="add_steps">Add Steps</string>
    <string name="tap_to_choose_image">Tap to choose Image</string>
    <string name="click_to_add_images">Click to add Image(s)</string>
    <string name="add_images_videos">Add Images/Videos</string>
    <string name="cookie_sandwitch">Cookie Sandwitch</string>
    <string name="top_recipes">Top Recipes</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="your_ratings">-: Your Ratings :-</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="favourite">Favourite</string>
    <string name="my_recipe">My Recipe</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="discover">Discover</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="recipes">Recipes</string>
    <string name="general">General</string>
    <string name="REVIEW">REVIEW</string>
    <string name="recipee">Recipe</string>
    <string name="DiscoverRecipes">DiscoverRecipes</string>
    <string name="AddRecipe">AddRecipe</string>
    <string name="MyRecipe">MyRecipe</string>
    <string name="Profile">Profile</string>
    <string name="RecentlyViewRecipe">RecentlyViewRecipe</string>
    <string name="FavouriteRecipe">FavouriteRecipe</string>
    <string name="Login">Login</string>
    <string name="no_recipe_found">No Recipe Found</string>
    <string name="admin_home">Admin Home</string>
    <string name="Email_Id_Required">Email Id Required</string>
    <string name="Password_Required">Password Required</string>
    <string name="Enter_Valid_Email_Password">Enter Valid Email and Password</string>
    <string name="Login_SuccessFull">Login SuccessFull</string>
    <string name="Please_verify_your_Email">Please verify your Email</string>
    <string name="Signup">Signup</string>
    <string name="Tap_to_choose_Image">Tap to choose Image</string>
    <string name="Choose_Image">Choose Image</string>
    <string name="Enter_All_Details">Enter All Details</string>
    <string name="Check_Email_ID">Check Email ID</string>
    <string name="User_already_exists">User with this email already exist.</string>
    <string name="Something_Wrong">Something Wrong</string>
    <string name="Password_not_matched">Password not matched</string>
    <string name="Verification_mailhasnotbeen_sent">Verification mail has not been sent</string>
    <string name="User_Profile_Images">User Profile Images</string>
    <string name="Upload_Failed">Upload Failed</string>
    <string name="User_Profile_Details">User Profile Details</string>
    <string name="Registration_Successful">Registration Successful</string>
    <string name="Database_Error">Database Error!</string>
    <string name="Clear_List">Clear List</string>
    <string name="Basic">Basic</string>
    <string name="All">All</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Brunch">Brunch</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Snacks">Snacks</string>
    <string name="Appetisers">Appetisers</string>
    <string name="Desserts">Desserts</string>
    <string name="Baking">Baking</string>
    <string name="Drinks">Drinks</string>
    <string name="Others">Others</string>
    <string name="select">Select</string>
    <string name="Select">select</string>
    <string name="Bad">Bad</string>
    <string name="Ok">Ok</string>
    <string name="Good">Good</string>
    <string name="Very_Good">Very Good</string>
    <string name="Best">Best</string>
    <string name="Search_Recipe_ChefName">Search Recipe/Chef Name</string>
    <string name="Search_Results_for">Search Results for</string>
    <string name="Recipe_Updated">Recipe Updated</string>
    <string name="Profile_Updated">Profile Updated</string>
    <string name="No_Favourite_Recipes">No Favourite Recipes</string>
    <string name="NoRecipe_History">No Recipe History</string>
    <string name="Loggedout">Logged out</string>
    <string name="Please_Enter_Your_Email">Please Enter Your Email</string>
    <string name="Password_Reset_Email_sent">Password Reset Email sent</string>
    <string name="Enter_Registered_Email">Enter Registered Email</string>
    <string name="Enter_Recipe_Chef_Name">Enter Recipe/Chef Name</string>
    <string name="Delete">Delete</string>
    <string name="Are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="Cancel">Cancel</string>

</resources>
