<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/General"
        android:title="@string/general">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/AdminHome"
                    android:title="@string/admin_home"
                    android:icon="@drawable/ic_home_black_24dp"

                    />


                <item
                    android:id="@+id/Profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_perm_identity_black_24dp"/>

            </group>
        </menu>
    </item>

    <item android:id="@+id/Recipe"
        android:title="@string/recipes">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/MyRecentRecipe"
                    android:title="@string/recently_viewed"
                    android:icon="@drawable/ic_format_list_bulleted_black_24dp"/>


                <item
                    android:id="@+id/MyFavRecipe"
                    android:title="@string/favourite"
                    android:icon="@drawable/ic_favorite_black_24dp"/>


            </group>
        </menu>
    </item>

    <item
        android:id="@+id/Logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_power_settings_new_black_24dp"/>


</menu>