<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".Fragments.ForgotPasswordFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/dark"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_registered_email_id_below"
                android:textSize="15dp"
                android:textColor="@color/dark"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                />
            <EditText
                android:id="@+id/ForgotEmail"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp"
                android:hint="@string/enter_email"
                android:textColor="#193566"
                android:textColorHint="#A9B6C9"
                android:background="@drawable/email"
                android:paddingLeft="25dp"
                android:drawablePadding="20dp"
                android:inputType="textEmailAddress"/>
            <Button
                android:id="@+id/ForgotSubmitBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/light"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="250dp"
                android:textSize="25dp"
                android:background="@drawable/button_background" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>