<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0F3"
    tools:context=".Fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iconLogin"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="105dp"
                android:layout_marginLeft="105dp"
                android:layout_marginEnd="111dp"
                android:layout_marginRight="111dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/welcomeLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="35sp"
                android:textColor="#193566"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="230dp"/>


            <TextView
                android:id="@+id/startLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:fontFamily="sans-serif"
                android:textColor="#193566"
                android:textSize="17sp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="280dp"/>

            <EditText
                android:id="@+id/enterEmailLogin"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="330dp"
                android:hint="@string/email"
                android:textColor="#193566"
                android:textColorHint="#A9B6C9"
                android:background="@drawable/email"
                android:paddingLeft="25dp"
                android:drawablePadding="20dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/enterPasswordLogin"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="420dp"
                android:hint="@string/password"
                android:textColor="#193566"
                android:textColorHint="#A9B6C9"
                android:background="@drawable/email"
                android:paddingLeft="25dp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/visible"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_black_24dp"
                android:layout_marginLeft="305dp"
                android:visibility="visible"
                android:layout_marginTop="438dp"/>
            <TextView
                android:id="@+id/notvisible"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_off_black_24dp"
                android:layout_marginLeft="305dp"
                android:visibility="invisible"
                android:layout_marginTop="438dp"/>

            <TextView
                android:id="@+id/forgotPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="490dp"
                android:layout_marginLeft="55dp"
                android:textColor="#193566"
                android:textSize="17sp"
                android:fontFamily="sans-serif"
                android:text="@string/forgotpassword"/>


            <Button
                android:id="@+id/MainLoginBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="540dp"
                android:textSize="20dp"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="#ECF0F3"
                android:background="@drawable/button_background"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signUpLogin"
                android:text="@string/signup"
                android:layout_marginTop="610dp"
                android:layout_centerHorizontal="true"
                android:textColor="#193566"
                android:fontFamily="sans-serif"
                android:textSize="17dp"/>

            <View android:background="#A9B6C9"
                android:layout_width = "150dp"
                android:layout_height="1dp"
                android:layout_below="@id/signUpLogin"
                android:layout_marginTop="30dp"
                android:id="@+id/leftLine"
                android:layout_marginLeft="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/orText"
                android:text="@string/or"
                android:layout_below="@+id/signUpLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="15dp"/>


            <View android:background="#A9B6C9"
                android:layout_width = "150dp"
                android:layout_height="1dp"
                android:layout_below="@id/signUpLogin"
                android:layout_marginTop="30dp"
                android:layout_alignRight="@+id/leftLine"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"/>


            <Button
                android:id="@+id/google_signIn"
                android:layout_width="280dp"
                android:layout_height="55dp"
                android:background="@drawable/button_background"
                android:drawableLeft="@drawable/google"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="50dp"
                android:text="@string/sign_in_with_google"
                android:layout_below="@+id/signUpLogin"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ECF0F3"
                android:padding="10dp"
                android:drawablePadding="0dp"
                android:drawableStart="@drawable/google" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>