<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SignupFragment"
    android:background="@color/light">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/DpImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/square_border"
                app:srcCompat="@drawable/ic_perm_identity_black_24dp"
                tools:ignore="VectorDrawableCompat"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/selectimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tap to choose Image"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/dark"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="185dp"/>
            <EditText
                android:id="@+id/CreateName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="230dp"
                android:hint="@string/enter_name"
                android:textColor="#193566"
                android:textColorHint="#A9B6C9"
                android:background="@drawable/email"
                android:paddingLeft="25dp"
                android:drawablePadding="20dp"
                android:maxLines="1"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/CreateEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="310dp"
                android:hint="@string/enter_email"
                android:textColor="#193566"
                android:textColorHint="#A9B6C9"
                android:background="@drawable/email"
                android:paddingLeft="25dp"
                android:drawablePadding="20dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/CreatePassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="390dp"
                android:hint="@string/enter_password"
                android:textColor="#193566"
                android:textColorHint="#A9B6C9"
                android:background="@drawable/email"
                android:paddingLeft="25dp"
                android:drawablePadding="20dp"
                android:maxLines="1"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/CreateRePassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="470dp"
                android:hint="@string/confirm_password"
                android:textColor="#193566"
                android:textColorHint="#A9B6C9"
                android:background="@drawable/email"
                android:paddingLeft="25dp"
                android:drawablePadding="20dp"
                android:maxLines="1"
                android:inputType="textPassword"/>
            <TextView
                android:id="@+id/visible1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_black_24dp"
                android:layout_marginLeft="310dp"
                android:visibility="visible"
                android:layout_marginTop="408dp"/>
            <TextView
                android:id="@+id/notvisible1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_off_black_24dp"
                android:layout_marginLeft="310dp"
                android:visibility="invisible"
                android:layout_marginTop="408dp"/>
            <TextView
                android:id="@+id/visible2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_black_24dp"
                android:layout_marginLeft="310dp"
                android:visibility="visible"
                android:layout_marginTop="488dp"/>
            <TextView
                android:id="@+id/notvisible2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_off_black_24dp"
                android:layout_marginLeft="310dp"
                android:visibility="invisible"
                android:layout_marginTop="488dp"/>
            <Button
                android:id="@+id/CreateBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="#ECF0F3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="570dp"
                android:background="@drawable/button_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LoginText"
                android:text="@string/login"
                android:layout_marginTop="630dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/dark"
                android:textSize="17dp"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>